Initial commit of baredot website

--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,19 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+#markdown:         redcarpet
+#highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            baredot
+tagline:          'dead-simple dotfile management using git'
+description:      'dead-simple dotfile management using <a href="https://git-scm.com/">git</a>'
+#url:              http://hyde.getpoole.com
 baseurl:          /
 
-author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
-
-paginate:         5
-
 # Custom vars
-version:          2.1.0
+version:          0.1.0
 
 github:
   repo:           https://github.com/poole/hyde
